# k8s-iam-operator

./: .commitlintrc.yml  .flake8  .gitignore  .releaserc.yml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE.md  Makefile  README.md  SECURITY.md  build.sh  deployment.yaml  mypy.ini  pyproject.toml  pytest.ini  release.sh  requirements.txt  setup.cfg  setup.py
.github/: RELEASE_CHECKLIST.md
.github/actions/setup-trivy/: action.yml
.github/workflows/: ci.yml  pr-validation.yml  release.yml
README/: ARCHITECTURE.md  DEPLOYMENT.md  USAGE.md
app/: __main__.py  config.py  container.py  exceptions.py  flask_app.py  logging_config.py  metrics_collector.py  protocols.py  validators.py  version.py
app/api/: __init__.py  health.py  metrics.py
app/kopf_handlers/: __init__.py  group_handlers.py  namespace_handlers.py  rbac_handlers.py  role_handlers.py  user_handlers.py
app/models/: __init__.py  group.py  role.py  user.py
app/repositories/: __init__.py  base.py  namespace_repository.py  network_policy_repository.py  rbac_repository.py  resource_quota_repository.py  secret_repository.py  serviceaccount_repository.py
app/services/: __init__.py  group_service.py  kubeconfig_service.py  rbac_service.py  role_service.py  user_service.py
app/utils/: __init__.py  audit.py  kubeconfig.py  no200filter.py  tracing.py
charts/k8s-iam-operator/: Chart.yaml  values-production.yaml  values.yaml
charts/k8s-iam-operator/crds/: groups.yaml  roles.yaml  users.yaml
charts/k8s-iam-operator/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  configmap.yaml  deployment.yaml  grafana-audit-dashboard.yaml  grafana-dashboard.yaml  hpa.yaml  namespace.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  prometheusrule.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
configs/: log_config.py
crd/: group_crd.yaml  rbac.yaml  roles_crd.yaml  user_crd.yaml  users_crd.yaml
docs/: api-reference.md  architecture.md  audit.md  deployment.md  development.md  production-guide.md  slo.md  troubleshooting.md  upgrade-guide.md
docs/design/: v4-features-design.md
docs/integrations/: external-secrets-operator.md
docs/runbooks/: high-error-rate.md  operator-down.md  reconciliation-stuck.md
examples/: groups.yaml  roles.yaml  user.yaml  users-v4.yaml
operator/: __init__.py  controllers.py  handlers.py  kubeconfig.py  utils.py
operator_core/: __init__.py  __main__.py  controllers.py  handlers.py  utils.py
tests/: __init__.py  conftest.py  create_sa.py  kubeconfig.json  kubeconfig.yaml  test.py
tests/integration/: __init__.py  test_group_lifecycle.py  test_rbac_bindings.py  test_user_lifecycle.py
tests/unit/: __init__.py  test_group_service.py  test_kubeconfig_service.py  test_models.py  test_rbac_service.py  test_role_service.py  test_user_service.py  test_validators.py
