[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "k8s-iam-operator"
version = "3.0.0"
description = "Kubernetes Operator for IAM management using Custom Resource Definitions"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Yannick Siewe"}
]
keywords = ["kubernetes", "operator", "iam", "rbac", "kopf"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "kopf>=1.36.0",
    "kubernetes>=28.0.0",
    "flask>=2.3.0",
    "gunicorn>=21.0.0",
    "prometheus_client>=0.17.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-instrumentation>=0.41b0",
    "opentelemetry-exporter-otlp>=1.20.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-timeout>=2.2.0",
    "flake8>=6.1.0",
    "mypy>=1.5.0",
    "types-requests>=2.31.0",
]

[project.urls]
Homepage = "https://github.com/yannick-siewe/k8s-iam-operator"
Documentation = "https://github.com/yannick-siewe/k8s-iam-operator#readme"
Repository = "https://github.com/yannick-siewe/k8s-iam-operator.git"
Issues = "https://github.com/yannick-siewe/k8s-iam-operator/issues"

[project.scripts]
k8s-iam-operator = "app.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests",
    "integration: Integration tests (require Kubernetes cluster)",
    "slow: Slow running tests",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "app/__main__.py",
    "tests/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
