[metadata]
name = k8s-iam-operator
version = 1.0.0
author = Yannick Siewe
author_email = yannick.siewe@gmail.com
description = This Kubernetes operator purpose is to facilitate user management base on RBAC
long_description = file: README.md
long_description_content_type = text/markdown
url = ''

[options]
packages = find:
install_requires =
    kopf>=2.3.0
    kubernetes

[options.entry_points]
kopf_handlers =
    k8s-operator-script = operator.handlers:main

[options.packages.find]
exclude =
    tests*
    test_*

[bdist_wheel]
universal = 1
